# technopreneurship

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/: .~lock.classified_data_question_7.csv#  classified_data_question_5.csv  classified_data_question_7.csv  classified_responses.csv
data/raw/: Customer Discovery Group 4 - Sheet1.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 1.0-iragca-customer-discovery.ipynb
technopreneurship/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
technopreneurship/matplotlib/: iragca_cmr10.mplstyle  iragca_ml.mplstyle  iragca_ml2.mplstyle
technopreneurship/modeling/: predict.py  train.py
