[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "technopreneurship"
version = "0.0.1"
description = "ES211a - Technopreneurship"
authors = [
  { name = "Group 4" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "wordcloud>=1.9.4",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["technopreneurship"]
force_sort_within_sections = true

[tool.uv.sources]
technopreneurship = { workspace = true }

[dependency-groups]
dev = [
    "technopreneurship",
]
